# py-weather-pipeline

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  main.py  notebook.ipynb  pyproject.toml
.cursor/: rules
.github/: copilot-instructions.md
docs/: py-weather-pipeline.excalidraw
etl/: flow.py
etl/extract/: task.py
etl/load/: task.py
etl/transform/: cleaning.py  task.py  transformation.py
settings/: settings.py
zarf/compose/: docker-compose.yaml
